@@ -83,11 +83,11 @@ class CliLocaleText implements CliCommandInterface
                     'key' => 'Text item key.',
                 ],
                 [
-                    'print' => 'Print to console, don\'t return value.',
+                    'get' => 'Return value, don\'t print it.',
                     'inspect' => 'Print Inspect\'ed value instead of JSON-encoded.',
                 ],
                 [
-                    'p' => 'print',
+                    'g' => 'get',
                     'i' => 'inspect',
                 ]
             ),
@@ -169,7 +169,7 @@ class CliLocaleText implements CliCommandInterface
 
     /**
      * @return mixed
-     *      Exits if option 'print'.
+     *      Exits if no/falsy option 'get'.
      */
     protected function cmdGet()
     {
@@ -209,8 +209,8 @@ class CliLocaleText implements CliCommandInterface
             }
         }
 
-        $print = !empty($this->command->options['print']);
-        $use_inspect = !empty($this->command->options['inspect']);
+        $get = !empty($this->command->options['get']);
+        $use_inspect = !$get && !empty($this->command->options['inspect']);
 
         if ($this->command->inputErrors) {
             foreach ($this->command->inputErrors as $msg) {
@@ -224,7 +224,7 @@ class CliLocaleText implements CliCommandInterface
             exit;
         }
         // Display command and the arg values used.---------------------
-        if ($print || $use_inspect) {
+        if (!$get) {
             $this->environment->echoMessage(
                 $this->environment->format(
                     $this->environment->format($this->command->name, 'emphasize')
@@ -273,7 +273,7 @@ class CliLocaleText implements CliCommandInterface
             exit;
         }
         $value = $locale_text->get($section, $key);
-        if (!$print && !$use_inspect) {
+        if ($get) {
             return $value;
         }
         $this->environment->echoMessage('');
@@ -410,7 +410,7 @@ class CliLocaleText implements CliCommandInterface
                 . '] section[' . $section . '] key[' . $key . '] value[' . addcslashes($value, "\0..\37") . '].',
                 'error'
             );
-        } else {
+        } elseif (!$this->command->silent) {
             $this->environment->echoMessage(
                 'Set locale-text item language[' . $language
                 . '] section[' . $section . '] key[' . $key . '] value[' . addcslashes($value, "\0..\37") . '].',
@@ -531,7 +531,7 @@ class CliLocaleText implements CliCommandInterface
                 . $language . '] section[' . $section . '] key[' . $key . '].',
                 'error'
             );
-        } else {
+        } elseif (!$this->command->silent) {
             $this->environment->echoMessage(
                 'Deleted locale-text item language[' . $language . '] section[' . $section . '] key[' . $key . '].',
                 'success'
@@ -567,7 +567,7 @@ class CliLocaleText implements CliCommandInterface
         // Pre-confirmation --yes/-y ignored for this command.
         if ($this->environment->riskyCommandRequireConfirm && $this->command->preConfirmed) {
             $this->command->inputErrors[] = 'Pre-confirmation \'yes\'/-y option not supported for this command,'
-                . "\n" . 'unless env var PHP_LIB_SIMPLECOMPLEX_UTILS_RISKY_COMMAND_SKIP_CONFIRM'
+                . "\n" . 'unless env var PHP_LIB_SIMPLECOMPLEX_UTILS_CLI_SKIP_CONFIRM'
                 . "\n" . 'or .risky_command_skip_confirm file in document root.';
         }
         if ($this->command->inputErrors) {
@@ -640,7 +640,7 @@ class CliLocaleText implements CliCommandInterface
         // Do it.
         if (!$locale_text->refresh()) {
             $this->environment->echoMessage('Failed to refresh locale-text language[' . $language . '].', 'error');
-        } else {
+        } elseif (!$this->command->silent) {
             $this->environment->echoMessage('Refreshed locale-text language[' . $language . '].', 'success');
         }
         exit;
@@ -686,7 +686,7 @@ class CliLocaleText implements CliCommandInterface
         // Pre-confirmation --yes/-y ignored for this command.
         if ($this->environment->riskyCommandRequireConfirm && $this->command->preConfirmed) {
             $this->command->inputErrors[] = 'Pre-confirmation \'yes\'/-y option not supported for this command,'
-                . "\n" . 'unless env var PHP_LIB_SIMPLECOMPLEX_UTILS_RISKY_COMMAND_SKIP_CONFIRM'
+                . "\n" . 'unless env var PHP_LIB_SIMPLECOMPLEX_UTILS_CLI_SKIP_CONFIRM'
                 . "\n" . 'or .risky_command_skip_confirm file in document root.';
         }
         if ($this->command->inputErrors) {
@@ -773,7 +773,7 @@ class CliLocaleText implements CliCommandInterface
             ]
         )) {
             $this->environment->echoMessage('Failed to export locale-text language[' . $language . '].', 'error');
-        } else {
+        } elseif (!$this->command->silent) {
             $this->environment->echoMessage(
                 'Exported locale-text language[' . $language . '] from ' . (!$from_sources ? 'cache' : 'sources')
                 . ' to target file[' . $target_file . '].',
